# python-project-lvl3

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  ru-hexlet-io-blog-posts-solid-is-relevant.html  setup.cfg
demo/: hakibenita-com-django-rest-framework-slow.html
demo/hakibenita-com-django-rest-framework-slow_files/: hakibenita-com-django-rest-framework-slow.html  hakibenita-com-feeds-all-atom.xml  hakibenita-com-theme-css-pygment.css  hakibenita-com-theme-css-style.css
page_loader/: __init__.py  cli.py  exceptions.py  loader.py  processor.py
page_loader/scripts/: loader.py
page_loader_demo/: ru-hexlet-io-courses.html
tests/: test_exceptions.py  test_loader.py
tests/fixtures/: ru-hexlet-io-about.html  ru-hexlet-io-courses-reviews.html  ru-hexlet-io-courses.html  ru-hexlet-io-courses_expected.html  ru-hexlet-io-tracks.html
